--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
         "php": ">=5.3.0",
         "composer/installers": "*",
         "leafo/lessphp": "0.4.*"
+    },
+    "extra": {
+    	"installer-name": "Bootstrap"
     }
 }
