--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=5.3.0",
         "composer/installers": "*",
-        "leafo/lessphp": "0.4.*"
+        "oyejorge/less.php": "1.7.*"
     },
     "extra": {
     	"installer-name": "Bootstrap"
