--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "CakePHP Twitter Bootstrap Plugin",
     "type": "cakephp-plugin",
     "keywords": ["cakephp", "bootstrap", "plugin"],
+    "license": "Apache-2.0",
     "require": {
         "php": ">=5.3.0",
         "composer/installers": "*",
