Adding autoload to composer.json

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
     },
     "extra": {
     	"installer-name": "Bootstrap"
+    },
+    "autoload": {
+        "psr-4": {
+            "Bootstrap\\": "src"
+        }
     }
 }
