--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "role": "Developer"
         }
     ],
-    "description": "CakePHP Twitter Bootstrap Plugin",
+    "description": "Twitter Bootstrap CakePHP Plugin with bundled less.php parser, helper and bake templates",
     "type": "cakephp-plugin",
     "keywords": ["cakephp", "bootstrap", "plugin"],
     "license": "Apache-2.0",
