Fixed @import issues
- There's no need to specify the less_path in LessHelper. Instead, the full path to the less file should be given when compiling.
- Plugin notation has also been implemented with this change.
- Updated readme.md according to these changes

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.4.19",
         "composer/installers": "*",
-        "oyejorge/less.php": "1.7.*"
+        "oyejorge/less.php": "1.7.0.2"
     },
     "extra": {
     	"installer-name": "Bootstrap"
