--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.19",
-        "cakephp/cakephp": ">=3.0.0",
+        "cakephp/cakephp": "~3.0",
         "elboletaire/less-cake-plugin": ">=1.6.1"
     },
     "extra": {
